--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
         <spark.version>2.1.0</spark.version>
         <spectra-cluster.version>1.0.11-SNAPSHOT</spectra-cluster.version>
+        <scala-library.version>2.11.8</scala-library.version>
+        <common-cli.version>1.4</common-cli.version>
     </properties>
 
   <dependencies>
@@ -47,8 +49,14 @@
       <dependency>
           <groupId>org.scala-lang</groupId>
           <artifactId>scala-library</artifactId>
-          <version>2.11.8</version>
+          <version>${scala-library.version}</version>
           <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>uk.ac.ebi.pride.spectracluster</groupId>
+          <artifactId>spectra-cluster</artifactId>
+          <version>${spectra-cluster.version}</version>
       </dependency>
 
 	  <dependency>
@@ -58,16 +66,18 @@
 	  </dependency>
 
       <dependency>
+          <groupId>commons-cli</groupId>
+          <artifactId>commons-cli</artifactId>
+          <version>${common-cli.version}</version>
+      </dependency>
+
+      <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.11</version>
       </dependency>
 
-      <dependency>
-          <groupId>uk.ac.ebi.pride.spectracluster</groupId>
-          <artifactId>spectra-cluster</artifactId>
-          <version>${spectra-cluster.version}</version>
-      </dependency>
+
 
 
 
