Export is Ready

--- a/src/test/resources/default-spark-local.properties
+++ b/src/test/resources/default-spark-local.properties
@@ -2,8 +2,16 @@
 ###This is the configuration file for the PRIDE-Cluster Algorithm including all the features from mapper
 ### and reducers. It is a merge between both previous xml config files. It considerably reduce the complexity or having to files.
 
+# Local Server
+spark.master=local[*]
+
+
+# Saprk Conf Variables
 
 spark.hadoop.mapred.output.compress=true
 spark.hadoop.mapred.output.compression.codec=snappy
+spark.hadoop.validateOutputSpecs=false
 
-clustering.file.prefix= "clusteringBin"
+# PRIDE Cluster Variables
+clustering.file.prefix= clusteringBin
+
