Configuration file has been added

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -2,8 +2,45 @@
 ###This is the configuration file for the PRIDE-Cluster Algorithm including all the features from mapper
 ### and reducers. It is a merge between both previous xml config files. It considerably reduce the complexity or having to files.
 
+# Spark Config File
+
+## MapReduce Compress Variables
 
 spark.hadoop.mapred.output.compress=true
 spark.hadoop.mapred.output.compression.codec=snappy
 
-clustering.file.prefix= "clusteringBin"
+# Memory assigned to each task node JVM
+mapred.child.java.opts = -Xmx6600m
+
+# Compress type for mapper's output, change from RECORD to BLOCK to make it more efficient
+mapred.output.compression.type = BLOCK
+
+# Customize when reducers startup. A value of 1.00 will wait for all the mappers to finish. A value of 0.0 will start the reducers right away.
+mapred.reduce.slowstart.completed.maps = 0.9
+
+# The number of milliseconds before a task will be terminated if it neither reads an input, writes an output, nor updates its status string
+mapred.task.timeout = 0
+
+# Each mapper task has a circular memory that it writes the output to
+io.sort.mb = 1000
+
+# This property controls the maximum number of streams to merge at once, the default is 10
+io.sort.factor = 100
+
+# Whether to enable the JVM build-in profiler
+mapred.task.profile = false
+
+# Profiler configuration parameters
+mapred.task.profile.params = -agentlib:hprof=cpu=samples,heap=sites,interval=20,depth=6,force=n,thread=n,verbose=n,file=%s
+
+# The mapper tasks to be profiled
+mapred.task.profile.maps = 0 
+
+# The reducer tasks to be profiled
+mapred.task.profile.reduces = 0
+
+# PRIDE Cluster Variables
+
+clustering.file.prefix= clusteringBin
+initial.highest.peak.filter = 70
+
