Configuration file has been added

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -41,6 +41,9 @@ mapred.task.profile.reduces = 0
 
 # PRIDE Cluster Variables
 
+# Prefix for the final output of each clustering file
 clustering.file.prefix= clusteringBin
+
+# Initial Number of Peaks Filter
 initial.highest.peak.filter = 70
 
