Configuration file has been added

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -47,3 +47,30 @@ clustering.file.prefix= clusteringBin
 # Initial Number of Peaks Filter
 initial.highest.peak.filter = 70
 
+# Filter cluster output to have minimum number of spectra
+mini.number.spectra = 2
+
+
+# If set to "true" the spectra are included in the .clustering file. This no
+# This no longer works in the "spectraLess" versions of the algorithm were
+# clustered spectra are no longer stored.
+clustering.file.include.spectra = false
+
+# Whether to remove empty peaks in consensus spectrum
+remove.empty.peaks = true
+
+# The number of reducers used for the job
+mapred.reduce.tasks = 120
+
+# Whether to compress mapper's output
+mapred.compress.map.output = true
+
+
+# Turn off the speculative execution to avoid running the same map tasks multiple times
+mapred.map.tasks.speculative.execution = false
+
+# Spectrum Checker
+pride.cluster.similarity.checker = uk.ac.ebi.pride.spectracluster.similarity.CombinedFisherIntensityTest
+
+
+pride.cluster.similarity.only_compare_n_highest_peaks = 1
