--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -72,5 +72,30 @@ mapred.map.tasks.speculative.execution = false
 # Spectrum Checker
 pride.cluster.similarity.checker = uk.ac.ebi.pride.spectracluster.similarity.CombinedFisherIntensityTest
 
+# Only compare the highest peaks
 
 pride.cluster.similarity.only_compare_n_highest_peaks = 1
+
+# Sets the internal correction factor to calculate the clustering accuracy
+
+cdf.min_number_comparisons =  5000
+
+# The window size of the clustering engine in m/z. This is equivalent to a search engine's precursor tolerance.
+# This option only has an effect if it is smaller than the mapper's window size.
+
+pride.cluster.major.peak.window =  0.5
+
+# This option can be used to disable the comparison peak filter. This is only sensible
+# if the spectra were already heavily pre-processed during loading
+
+enable.comparison.peak.filter = true
+
+# If this option is set, only the set amount of clusters are kept in memory. Afterwards,
+# the internal clusters are reset and the clustering is started from scratch. This
+# option is only used in the intial round and disabled afterwards.
+# To disable this feature, set this value to "0".
+
+pride.cluster.maximum_number_clusters = 10000
+
+
+
