Configuration file has been added

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -97,5 +97,5 @@ enable.comparison.peak.filter = true
 
 pride.cluster.maximum_number_clusters = 10000
 
-
-
+# Indicates whether to shift the bins by half the window size
+pride.cluster.offset.bins = true
