--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -9,93 +9,88 @@
 spark.hadoop.mapred.output.compress=true
 spark.hadoop.mapred.output.compression.codec=snappy
 
-# Memory assigned to each task node JVM
+## Memory assigned to each task node JVM
 mapred.child.java.opts = -Xmx6600m
 
-# Compress type for mapper's output, change from RECORD to BLOCK to make it more efficient
+## Compress type for mapper's output, change from RECORD to BLOCK to make it more efficient
 mapred.output.compression.type = BLOCK
 
-# Customize when reducers startup. A value of 1.00 will wait for all the mappers to finish. A value of 0.0 will start the reducers right away.
+## Customize when reducers startup. A value of 1.00 will wait for all the mappers to finish. A value of 0.0 will start the reducers right away.
 mapred.reduce.slowstart.completed.maps = 0.9
 
-# The number of milliseconds before a task will be terminated if it neither reads an input, writes an output, nor updates its status string
+## The number of milliseconds before a task will be terminated if it neither reads an input, writes an output, nor updates its status string
 mapred.task.timeout = 0
 
-# Each mapper task has a circular memory that it writes the output to
+## Each mapper task has a circular memory that it writes the output to
 io.sort.mb = 1000
 
-# This property controls the maximum number of streams to merge at once, the default is 10
+## This property controls the maximum number of streams to merge at once, the default is 10
 io.sort.factor = 100
 
-# Whether to enable the JVM build-in profiler
+## Whether to enable the JVM build-in profiler
 mapred.task.profile = false
 
-# Profiler configuration parameters
+## Profiler configuration parameters
 mapred.task.profile.params = -agentlib:hprof=cpu=samples,heap=sites,interval=20,depth=6,force=n,thread=n,verbose=n,file=%s
 
-# The mapper tasks to be profiled
+## The mapper tasks to be profiled
 mapred.task.profile.maps = 0 
 
-# The reducer tasks to be profiled
+## The reducer tasks to be profiled
 mapred.task.profile.reduces = 0
 
-# PRIDE Cluster Variables
+# PRIDE Cluster Parameters
 
-# Prefix for the final output of each clustering file
+## Prefix for the final output of each clustering file
 clustering.file.prefix= clusteringBin
 
-# Initial Number of Peaks Filter
+## Initial Number of Peaks Filter
 initial.highest.peak.filter = 70
 
-# Filter cluster output to have minimum number of spectra
+## Filter cluster output to have minimum number of spectra
 mini.number.spectra = 2
 
 
-# If set to "true" the spectra are included in the .clustering file. This no
-# This no longer works in the "spectraLess" versions of the algorithm were
-# clustered spectra are no longer stored.
+## If set to "true" the spectra are included in the .clustering file. This no
+## This no longer works in the "spectraLess" versions of the algorithm were
+## clustered spectra are no longer stored.
 clustering.file.include.spectra = false
 
-# Whether to remove empty peaks in consensus spectrum
+## Whether to remove empty peaks in consensus spectrum
 remove.empty.peaks = true
 
-# The number of reducers used for the job
+## The number of reducers used for the job
 mapred.reduce.tasks = 120
 
-# Whether to compress mapper's output
+## Whether to compress mapper's output
 mapred.compress.map.output = true
 
 
-# Turn off the speculative execution to avoid running the same map tasks multiple times
+## Turn off the speculative execution to avoid running the same map tasks multiple times
 mapred.map.tasks.speculative.execution = false
 
-# Spectrum Checker
+## Spectrum Checker
 pride.cluster.similarity.checker = uk.ac.ebi.pride.spectracluster.similarity.CombinedFisherIntensityTest
 
-# Only compare the highest peaks
-
+## Only compare the highest peaks
 pride.cluster.similarity.only_compare_n_highest_peaks = 1
 
-# Sets the internal correction factor to calculate the clustering accuracy
-
+## Sets the internal correction factor to calculate the clustering accuracy
 cdf.min_number_comparisons =  5000
 
-# The window size of the clustering engine in m/z. This is equivalent to a search engine's precursor tolerance.
-# This option only has an effect if it is smaller than the mapper's window size.
-
+## The window size of the clustering engine in m/z. This is equivalent to a search engine's precursor tolerance.
+## This option only has an effect if it is smaller than the mapper's window size.
 pride.cluster.major.peak.window =  0.5
 
-# This option can be used to disable the comparison peak filter. This is only sensible
-# if the spectra were already heavily pre-processed during loading
-
+## This option can be used to disable the comparison peak filter. This is only sensible
+## if the spectra were already heavily pre-processed during loading
 enable.comparison.peak.filter = true
 
-# If this option is set, only the set amount of clusters are kept in memory. Afterwards,
-# the internal clusters are reset and the clustering is started from scratch. This
-# option is only used in the intial round and disabled afterwards.
-# To disable this feature, set this value to "0".
-
+## If this option is set, only the set amount of clusters are kept in memory. Afterwards,
+## the internal clusters are reset and the clustering is started from scratch. This
+## option is only used in the intial round and disabled afterwards.
+## To disable this feature, set this value to "0".
 pride.cluster.maximum_number_clusters = 10000
 
-# Indicates whether to shift the bins by half the window size
+## Indicates whether to shift the bins by half the window size
 pride.cluster.offset.bins = true
