more changes in the config parameters

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -15,8 +15,6 @@ mapred.child.java.opts = -Xmx6600m
 # Compress type for mapper's output, change from RECORD to BLOCK to make it more efficient
 mapred.output.compression.type = BLOCK
 
-# Customize when reducers startup. A value of 1.00 will wait for all the mappers to finish. A value of 0.0 will start the reducers right away.
-mapred.reduce.slowstart.completed.maps = 0.9
 
 # The number of milliseconds before a task will be terminated if it neither reads an input, writes an output, nor updates its status string
 mapred.task.timeout = 0
@@ -89,4 +87,9 @@ pride.cluster.maximum_number_clusters = 10000
 ## Indicates whether to shift the bins by half the window size
 pride.cluster.offset.bins = true
 
+## PRIDE Cluster start threshold accuracy.
+pride.cluster.start.threshold = 0.999F
+
+## PRIDE Cluster end threshold accuracy
+pride.cluster.end.thershold = 0.99F
 
