export now is ready

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -9,6 +9,9 @@
 spark.hadoop.mapred.output.compress=true
 spark.hadoop.mapred.output.compression.codec=snappy
 
+## Re-write the output files.
+spark.hadoop.validateOutputSpecs=false
+
 # Memory assigned to each task node JVM
 mapred.child.java.opts = -Xmx6600m
 
@@ -43,7 +46,7 @@ mapred.task.profile.reduces = 0
 pride.cluster.major.peak.count = 5
 
 ## Prefix for the final output of each clustering file
-pride.cluster.clustering.file.prefix= clusteringBin
+pride.cluster.clustering.file.prefix = clusteringBin
 
 ## Initial Number of Peaks Filter
 pride.cluster.initial.highest.peak.filter = 70
