--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -96,5 +96,8 @@ pride.cluster.start.threshold = 0.999F
 ## PRIDE Cluster end threshold accuracy
 pride.cluster.end.thershold = 0.99F
 
+## Export to CDF (true) if JSON (false) Clustering output
+pride.cluster.export.cdf.clustering = true
+
 
 
