export support now JSON File

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -97,7 +97,7 @@ pride.cluster.start.threshold = 0.999F
 pride.cluster.end.thershold = 0.99F
 
 ## Export to CDF (true) if JSON (false) Clustering output
-pride.cluster.export.cdf.clustering = true
+pride.cluster.export.cdf.clustering = false
 
 
 
