--- a/src/test/resources/default-spark-local.properties
+++ b/src/test/resources/default-spark-local.properties
@@ -2,14 +2,14 @@
 ###This is the configuration file for the PRIDE-Cluster Algorithm including all the features from mapper
 ### and reducers. It is a merge between both previous xml config files. It considerably reduce the complexity or having to files.
 
-# Local Server
-spark.master=local[*]
+# Spark Config File
 
-
-# Saprk Conf Variables
+#### MapReduce Compress Variables #####
 
 spark.hadoop.mapred.output.compress=true
 spark.hadoop.mapred.output.compression.codec=snappy
+
+## Re-write the output files.
 spark.hadoop.validateOutputSpecs=false
 
 # Memory assigned to each task node JVM
@@ -18,8 +18,6 @@ mapred.child.java.opts = -Xmx6600m
 # Compress type for mapper's output, change from RECORD to BLOCK to make it more efficient
 mapred.output.compression.type = BLOCK
 
-# Customize when reducers startup. A value of 1.00 will wait for all the mappers to finish. A value of 0.0 will start the reducers right away.
-mapred.reduce.slowstart.completed.maps = 0.9
 
 # The number of milliseconds before a task will be terminated if it neither reads an input, writes an output, nor updates its status string
 mapred.task.timeout = 0
@@ -37,70 +35,69 @@ mapred.task.profile = false
 mapred.task.profile.params = -agentlib:hprof=cpu=samples,heap=sites,interval=20,depth=6,force=n,thread=n,verbose=n,file=%s
 
 # The mapper tasks to be profiled
-mapred.task.profile.maps = 0 
+mapred.task.profile.maps = 0
 
 # The reducer tasks to be profiled
 mapred.task.profile.reduces = 0
 
-# PRIDE Cluster Variables
+##### PRIDE Cluster Parameters #####
 
-# Prefix for the final output of each clustering file
-clustering.file.prefix = clusteringBin
+# Default major peak count, define the number of major peaks that would be use to do the first clustering iteration.
+pride.cluster.major.peak.count = 5
 
-# Initial Number of Peaks Filter
-initial.highest.peak.filter = 70
+## Prefix for the final output of each clustering file
+pride.cluster.clustering.file.prefix = clusteringBin
 
-# Filter cluster output to have minimum number of spectra
-mini.number.spectra = 2
+## Initial Number of Peaks Filter
+pride.cluster.initial.highest.peak.filter = 70
 
-
-# If set to "true" the spectra are included in the .clustering file. This no
-# This no longer works in the "spectraLess" versions of the algorithm were
-# clustered spectra are no longer stored.
-clustering.file.include.spectra = false
-
-# Whether to remove empty peaks in consensus spectrum
-remove.empty.peaks = true
-
-# The number of reducers used for the job
-mapred.reduce.tasks = 120
-
-# Whether to compress mapper's output
-mapred.compress.map.output = true
+## Filter cluster output to have minimum number of spectra
+pride.cluster.mini.number.spectra = 2
 
 
-# Turn off the speculative execution to avoid running the same map tasks multiple times
-mapred.map.tasks.speculative.execution = false
+## If set to "true" the spectra are included in the .clustering file. This no
+## This no longer works in the "spectraLess" versions of the algorithm were
+## clustered spectra are no longer stored.
+pride.cluster.clustering.file.include.spectra = false
 
-# Spectrum Checker
+## Whether to remove empty peaks in consensus spectrum
+pride.cluster.remove.empty.peaks = true
+
+
+## PRIDE Cluster Spectrum Checker
 pride.cluster.similarity.checker = uk.ac.ebi.pride.spectracluster.similarity.CombinedFisherIntensityTest
 
-# Only compare the highest peaks
-
+## Only compare the highest peaks
 pride.cluster.similarity.only_compare_n_highest_peaks = 1
 
-# Sets the internal correction factor to calculate the clustering accuracy
+## Sets the internal correction factor to calculate the clustering accuracy
+pride.cluster.cdf.min_number_comparisons =  5000
 
-cdf.min_number_comparisons =  5000
-
-# The window size of the clustering engine in m/z. This is equivalent to a search engine's precursor tolerance.
-# This option only has an effect if it is smaller than the mapper's window size.
-
+## The window size of the clustering engine in m/z. This is equivalent to a search engine's precursor tolerance.
+## This option only has an effect if it is smaller than the mapper's window size.
 pride.cluster.major.peak.window =  0.5
 
-# This option can be used to disable the comparison peak filter. This is only sensible
-# if the spectra were already heavily pre-processed during loading
+## This option can be used to disable the comparison peak filter. This is only sensible
+## if the spectra were already heavily pre-processed during loading
+pride.cluster.enable.comparison.peak.filter = true
 
-enable.comparison.peak.filter = true
-
-# If this option is set, only the set amount of clusters are kept in memory. Afterwards,
-# the internal clusters are reset and the clustering is started from scratch. This
-# option is only used in the intial round and disabled afterwards.
-# To disable this feature, set this value to "0".
-
+## If this option is set, only the set amount of clusters are kept in memory. Afterwards,
+## the internal clusters are reset and the clustering is started from scratch. This
+## option is only used in the intial round and disabled afterwards.
+## To disable this feature, set this value to "0".
 pride.cluster.maximum_number_clusters = 10000
 
-# Indicates whether to shift the bins by half the window size
+## Indicates whether to shift the bins by half the window size
 pride.cluster.offset.bins = true
+
+## PRIDE Cluster start threshold accuracy.
+pride.cluster.start.threshold = 0.999F
+
+## PRIDE Cluster end threshold accuracy
+pride.cluster.end.thershold = 0.99F
+
+## Export to CDF (true) if JSON (false) Clustering output
+pride.cluster.export.cdf.clustering = false
+
 
 
