Move the incremetal clustering transformer

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -94,7 +94,7 @@ pride.cluster.offset.bins = true
 pride.cluster.start.threshold = 0.999F
 
 ## PRIDE Cluster end threshold accuracy
-pride.cluster.end.thershold = 0.99F
+pride.cluster.end.threshold = 0.99F
 
 ## Export to CDF (true) if JSON (false) Clustering output
 pride.cluster.export.cdf.clustering = false
