filters has been added

--- a/conf/spark/default-spark-local.properties
+++ b/conf/spark/default-spark-local.properties
@@ -100,4 +100,13 @@ pride.cluster.end.threshold = 0.99F
 pride.cluster.export.cdf.clustering = false
 
 
+## Set of filters for the spectra, Filter peaks from the spectra
+
+# Filter immonium ions
+pride.cluster.spectra.filter.immonium_ions = true
+
+# Filter the mz Peaks in a window
+pride.cluster.spectra.filer.mz_150 = true
+pride.cluster.spectra.filter.mz_200 = true
+
 
