--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,8 @@
 log4j.appender.myConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.myConsoleAppender.layout=org.apache.log4j.PatternLayout
 #log4j.appender.myConsoleAppender.layout=com.jcabi.log.MulticolorLayout
-log4j.appender.myConsoleAppender.layout.ConversionPattern=[%p] %d || %c{1} || %m%n
+#log4j.appender.myConsoleAppender.layout.ConversionPattern=[%p] %d || %c{1} || %m%n
+log4j.appender.myConsoleAppender.layout.ConversionPattern=[%p] %d{HH:mm:ss}  %c  || %m%n
 #log4j.appender.myConsoleAppender.layout.ConversionPattern=[%color{%p}] %c: %m%n
 
 log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
@@ -16,6 +17,11 @@ log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %c{1} %M - %m%n
 log4j.rootLogger=INFO, myConsoleAppender, RollingAppender
 
 # The noisier spark logs go to file only
+log4j.logger.org.apache.hadoop.util=ERROR , RollingAppender
+log4j.logger.org.spark_project.jetty=WARN, RollingAppender
+log4j.logger.org.apache.spark=WARN, RollingAppender
+log4j.logger.org.apache.hadoop=WARN, RollingAppender
+log4j.logger.org.big.bio.clustering.pride.IncrementalClustering=WARN, RollingAppender
 log4j.logger.spark.storage=INFO, RollingAppender
 log4j.additivity.spark.storage=false
 log4j.logger.spark.scheduler=INFO, RollingAppender
@@ -29,4 +35,5 @@ log4j.additivity.spark.MapOutputTrackerActor=false
 log4j.logger.spark.MapOutputTracker=INFO, RollingAppender
 log4j.additivty.spark.MapOutputTracker=false
 log4j.org.sps.learning.spark.algorithms=DEBUG
-log4j.logger.org.apache.spark.executor=DEBUG
+
+#log4j.logger.org.apache.spark.executor=DEBUG
